--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,38 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<!DOCTYPE html>
+<html lang="en">
+        <head>
+                <meta charset="UTF-8" />
+                <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+                <title>Heading</title>
+        </head>
+
+        <body>
+            <div class="container-fluid">
+
+                <div class="row g-0 m-5 border-top">
+
+                    <div class="col-12 col-sm-6 col-lg-8 mt-5">
+                      <h1 class="text-secondary"><span class="text-black">The First Heading </span>Will Catch Your Eye</h1>
+                      <p class="mt-1">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-lg-4 mt-5 text-center">
+                        <img src="https://picsum.photos/300/300?random=1" class="img-fluid rounded-circle" alt="...">  
+                    </div>
+
+                  </div>
+
+                
+            </div>
+            
+
+
+
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+        </body>
+</html>
