--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,33 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<!DOCTYPE html>
+<html lang="en">
+        <head>
+                <meta charset="UTF-8" />
+                <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+                <title>Tagline</title>
+        </head>
+
+        <body>
+            <div class="container-fluid p-0">
+
+                <div class="card">
+                    <img class="img_edit w-100" src="https://cermayarriaxa.com/files/images/diciembre-que-es-una-smart-cit-84773.jpg" alt="">
+                    <div class="card-img-overlay text-center align-content-center">
+                        <h1 class="bg-light mb-3 title1 ">One Page Wonder</h1>
+                        <h3 class="bg-light title2">Will Knock Your Socks Off</h3>
+                    </div>
+                </div>
+
+            </div>
+            
+            
+
+
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+        </body>
+</html>
