Edit text to Lorem

--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -17,7 +17,7 @@
 
                     <div class="col-12 col-sm-6 col-lg-8 mt-5">
                       <h1 class="text-secondary"><span class="text-black">The First Heading </span>Will Catch Your Eye</h1>
-                      <p class="mt-1">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="mt-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam mollitia neque nesciunt officiis! Quis maxime expedita architecto nemo quasi natus nesciunt odit aliquid at veniam, consectetur ab fuga quo accusantium?</p>
                     </div>
 
                     <div class="col-12 col-sm-6 col-lg-4 mt-5 text-center">
